--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>formulario</title>
 </head>
 <body>
@@ -13,10 +14,10 @@
         <h1>CADASTRO</h1>
         <form>
             <label for="name">Nome:</label>
-            <input type="text" id="name" planceholder="nome">
+            <input type="text" id="name" planceholder="nome" class="textfield">
 
             <label for="colorpicker">cor favorita:</label>
-            <input type="color" id="colorpicker">
+            <input type="color" id="colorpicker"><br>
 
             <label for="nascimento">Data de nascimento</label>
             <input type="date" id="nascimento">
@@ -24,9 +25,9 @@
             <input type="time" id="hrnascimento" >
 
             <label for="email">email:</label>
-            <input type="email" id="email" placeholder="aaabbb.com">
+            <input type="email" id="email" placeholder="aaabbb.com" class="textfield" >
             <label for="confemail">confirme o email:</label>
-            <input type="email" id="confemail" placeholder="aaabbb.com">
+            <input type="email" id="confemail" placeholder="aaabbb.com" class="textfield">
 
             <label for="doc">faça upload do documento:</label>
             <input type="file" id="doc" accept=".pdf">
@@ -36,12 +37,12 @@
             <input tyle="image">
 
             <label for="telefone">telefone:</label>
-            <input tyle="number" id="telefone" placeholder="(11) 99999-9999">
+            <input tyle="number" id="telefone" placeholder="(11) 99999-9999" class="textfield">
 
             <label for="pass">senha:</label>
-            <input type="password" id="pass">
+            <input type="password" id="pass" class="textfield">
             <label for="confpass">confirme a senha</label>
-            <input type="password" id="confpass">
+            <input type="password" id="confpass" class="textfield">
 
             <label for="sexo">sexo:</label>
             <input type="radio" id="masc" name="sexo" value="m">
@@ -60,9 +61,9 @@
             <label for="agree">concordo com os termos</label>
             <input type="checkbox" id="agree" value="y">
             <label for="agree">concordo com as politicas</label>
-
-            <input type="reset" value="limpar">
-            <button>enviar</button>
+          
+            <input type="reset" value="limpar" class="whiteButton">
+            <button class="whiteButton" type="button">enviar</button>
 
 
             
